WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281055
Site isolated browsing should recover from process crashes
https://bugs.webkit.org/show_bug.cgi?id=281055
Summary
Site isolated browsing should recover from process crashes
Alex Christensen
Reported
2024-10-08 08:25:12 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2024-10-08 08:26:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34840
EWS
Comment 2
2024-10-08 16:25:15 PDT
Committed
284860@main
(d09af19e95b7): <
https://commits.webkit.org/284860@main
> Reviewed commits have been landed. Closing PR #34840 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-08 16:26:15 PDT
<
rdar://problem/137547405
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug