Site isolated browsing should recover from process crashes https://bugs.webkit.org/show_bug.cgi?id=281055

Reviewed by Charlie Wolfe.

And the WKNavigationDelegate should be properly informed.

* Source/WebKit/UIProcess/BrowsingContextGroup.cpp:
(WebKit::BrowsingContextGroup::processDidTerminate):
* Source/WebKit/UIProcess/BrowsingContextGroup.h:
* Source/WebKit/UIProcess/RemotePageProxy.cpp:
(WebKit::RemotePageProxy::processDidTerminate):
* Source/WebKit/UIProcess/RemotePageProxy.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::dispatchProcessDidTerminate):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::processDidTerminateOrFailedToLaunch):
* Source/WebKit/UIProcess/ios/WKPDFView.mm:
(-[WKPDFView pdfHostViewControllerExtensionProcessDidCrash:]):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::TEST(SiteIsolation, MultipleWebViewsWithSameOpenedConfiguration)):
(TestWebKitAPI::TEST(SiteIsolation, RecoverFromCrash)):
* Tools/TestWebKitAPI/cocoa/TestNavigationDelegate.h:

Canonical link: https://commits.webkit.org/284860@main